2 thumbnails updated at index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="thumb2">
            <img src="8_iefkJ0f90-HD.jpg" alt="">
-           <img src="Pv0iVoSZzN8-HD.jpg" alt="">
+           <img src="1715585150173.jpg" alt="">
         </div>
         <div class="thumb3">
            <img src="1715518144027.jpg" alt="">
@@ -55,7 +55,7 @@
            <img src="-oZtDwuKhrs-HD.jpg" alt="">
         </div>
         <div class="thumb3">
-           <img src="20240512_150519.jpg" alt=""><img src="iFtH6g5HEVM-HD.jpg" alt=""><img src="-0fUAaeDnQM-HD.jpg" alt="">
+           <img src="20240512_150519.jpg" alt=""><img src="1715744056868.jpg" alt=""><img src="-0fUAaeDnQM-HD.jpg" alt="">
         </div>
         <div class="thumb2">
            <img src="1715521183030.jpg" alt="">
