Update index.html goofyapa thumbnaail

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="thumb3">
            <img src="1715518144027.jpg" alt="">
-          <img src="OhVrDW_M82w-HD.jpg" alt="">
+          <img src="1715756168491.jpg" alt="">
            <img src="1687006142009.jpg" alt="">
         </div>
         <div class="thumb2">
