--- a/index.html
+++ b/index.html
@@ -37,32 +37,35 @@
 
         <div class="previewContainer">
         <div class="thumb3">
-           <img src="20230617_173111.jpg" alt="">
-          <img src="1715585311858.jpg" alt="">
+            <img src="1715585311858.jpg" alt="">
+            <img src="1715756168491.jpg" alt="">
+            <img src="8_iefkJ0f90-HD.jpg" alt="">
+        </div>
+        <div class="coverArt">
+            <img src="1715850762164.jpg" alt="">
+            <img src="Look Alive Album Art.jpg" alt="">
+        </div>
+        <div class="thumb3">
+            <img src="1715585150173.jpg" alt="">
+            <img src="1687006142009.jpg" alt="">
+            <img src="20240512_150519.jpg" alt="">
+        </div>
+        <div class="thumb2">
+            <img src="YLKHWqXHYNQ-HD.jpg" alt="">
+            <img src="-oZtDwuKhrs-HD.jpg" alt="">
+        </div>
+        <div class="thumb3">
+            <img src="20230617_173111.jpg" alt="">
+           <img src="1715744056868.jpg" alt="">
            <img src="1686664540550.jpg" alt="">
         </div>
         <div class="thumb2">
-           <img src="8_iefkJ0f90-HD.jpg" alt="">
-           <img src="1715585150173.jpg" alt="">
+            <img src="1715521183030.jpg" alt="">
         </div>
-        <div class="thumb3">
-           <img src="1715518144027.jpg" alt="">
-          <img src="1715756168491.jpg" alt="">
-           <img src="1687006142009.jpg" alt="">
-        </div>
-        <div class="thumb2">
-           <img src="YLKHWqXHYNQ-HD.jpg" alt="">
-           <img src="-oZtDwuKhrs-HD.jpg" alt="">
-        </div>
-        <div class="thumb3">
-           <img src="20240512_150519.jpg" alt=""><img src="1715744056868.jpg" alt=""><img src="-0fUAaeDnQM-HD.jpg" alt="">
-        </div>
-        <div class="thumb2">
-           <img src="1715521183030.jpg" alt="">
-        </div>
+        
         <div class="button-wrapper">
             <a href="contact.html">
-            <button class="btn outline"> order now </button></a>
+                <button class="btn outline"> order now </button></a>
         </div>
     </div>
     
